fix: unocss full-bleed rules, layout on EventPage and OrganizationPage, disable warning component SEO

--- a/src/styles/utility.css
+++ b/src/styles/utility.css
@@ -42,20 +42,20 @@
 
 /* Full Bleed: break out of a reduced width */
 /* As seen here: https://piccalil.li/tutorial/creating-a-full-bleed-css-utility/ */
-.full-bleed,
+/* .full-bleed,
 .full-bleed-before::before,
-.full-bleed-after::after {
-  /* --full-bleed-max-width: 2000px; */
-  width: 100vw;
+.full-bleed-after::after { */
+/* --full-bleed-max-width: 2000px; */
+/* width: 100vw;
   width: min(100vw, var(--full-bleed-max-width, 100vw));
   margin-left: calc(50% - 50vw);
   margin-left: calc(50% - min(100vw, var(--full-bleed-max-width, 100vw)) / 2);
 }
 .full-bleed-before,
 .full-bleed-after {
-  position: relative;
-  /* isolation: isolate; */
-
+  position: relative; */
+/* isolation: isolate; */
+/* 
   &::before,
   &::after {
     position: absolute;
@@ -71,7 +71,7 @@
   position: relative;
   left: 50%;
   margin-left: -50vw;
-}
+} */
 
 /* Skew border */
 .skew-border-after,
